--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
- * Use this CSS to learn some intersting techniques,
- * in case you're wondering how I built the UI.
- * Have fun! 😁
- */
-
 * {
   margin: 0;
   padding: 0;
@@ -73,14 +67,14 @@ nav {
   color: inherit;
   cursor: pointer;
   transition: all 0.3s;
+  border-radius: 20%;
 }
 
 .login__btn:hover,
-.login__btn:focus,
-.btn--sort:hover,
-.btn--sort:focus {
+.btn--sort:hover {
   outline: none;
-  color: #777;
+  color: #23df3c;
+  transition: 0.3 ease-in all;
 }
 
 /* MAIN */
@@ -294,4 +288,8 @@ h2 {
 
 .timer {
   font-weight: 600;
+}
+
+.hidden {
+  display: none;
 }
