--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,10 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2rem;
 }
 
 .welcome {
-  font-size: 1.9rem;
+  font-size: 2.2rem;
   font-weight: 500;
 }
 
@@ -39,13 +38,13 @@ nav {
 
 .login__input {
   border: none;
-  padding: 0.5rem 2rem;
-  font-size: 1.6rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.9rem;
   font-family: inherit;
   text-align: center;
   width: 12rem;
   border-radius: 10rem;
-  margin-right: 1rem;
+  margin-right: 1.4rem;
   color: inherit;
   border: 1px solid #fff;
   transition: all 0.3s;
@@ -81,7 +80,8 @@ nav {
 .app {
   position: relative;
   max-width: 100rem;
-  margin: 4rem auto;
+  margin: 5rem auto;
+  padding: 0 4rem;
   display: grid;
   grid-template-columns: 4fr 3fr;
   grid-template-rows: auto repeat(3, 15rem) auto;
@@ -97,7 +97,8 @@ nav {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1.1rem;
 }
 
 .balance__label {
@@ -292,4 +293,33 @@ h2 {
 
 .hidden {
   display: none;
+}
+
+/* FOOTER */
+.footer {
+  padding: 1rem 3rem;
+  background-color: #37383d;
+}
+
+.footer__link {
+  font-size: 1.6rem;
+  color: #eee;
+  text-decoration: none;
+}
+
+.footer__logo {
+  height: 5rem;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
+.footer__copyright {
+  font-size: 1.4rem;
+  color: #aaa;
+  text-align: center;
+}
+
+.footer__copyright .footer__link {
+  font-size: 1.4rem;
 }
